--- a/readme
+++ b/readme
@@ -1,6 +1,1 @@
-echo "# mmt" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git remote add origin https://github.com/Albazeta/mmt.git
-git push -u origin master
+MMT Matthew Multimedia Center
